--- a/stylesheets/Navbar.module.scss
+++ b/stylesheets/Navbar.module.scss
@@ -8,9 +8,7 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    padding-top: 1vh;
+    padding: 1vh 2vw;
 }
 
 .logo {
