--- a/stylesheets/sidebar.module.scss
+++ b/stylesheets/sidebar.module.scss
@@ -2,12 +2,12 @@
     height: 100vh;
     width: 250px;
     position: fixed;
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #202020;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     padding-left: 1vw;
 }
