--- a/stylesheets/login.module.scss
+++ b/stylesheets/login.module.scss
@@ -69,7 +69,7 @@
 .signInWithEmailCont {
     margin-top: 3vh;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     gap: 1vw;
     width: 41%;
 }
