--- a/stylesheets/login.module.scss
+++ b/stylesheets/login.module.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @font-face {
     font-family: "Venus";
     src: url("../fonts/Venus/Venus_Acier.otf");
@@ -27,7 +26,7 @@
 .login_hero {
     font-size: 2.5rem;
     font-weight: bold;
-    font-family: "Poppins";
+    font-family: "Inter", sans-serif;
 }
 
 .logo {
@@ -40,7 +39,7 @@
     font-size: 0.8rem;
     justify-content: center;
     align-items: center;
-    font-family: "Poppins";
+    font-family: "Inter", sans-serif;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 50px;
     padding: 0.75rem 1rem;
@@ -78,7 +77,7 @@
     width: 50%;
     text-align: center;
     color: rgba(0, 0, 0, 0.8);
-    font-family: "Poppins";
+    font-family: "Inter", sans-serif;
     font-size: 0.7rem;
     opacity: 0.5;
 }
@@ -94,7 +93,7 @@
     border-radius: 10px;
 
     padding-left: 0.5vw;
-    font-family: "Poppins";
+    font-family: "Inter", sans-serif;
     font-size: 0.9rem;
 
     margin-bottom: 2vh;
@@ -117,7 +116,7 @@
     border-radius: 50px;
     background-color: black;
     color: white;
-    font-family: "Poppins";
+    font-family: "Inter", sans-serif;
     font-size: 0.9rem;
     cursor: pointer;
     transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
