--- a/stylesheets/sidebarBtn.module.scss
+++ b/stylesheets/sidebarBtn.module.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .activeBtn {
     display: flex;
     background-color: #f5f5f5;
@@ -7,7 +6,7 @@
     border-radius: 50px;
     padding: 5px;
     margin: 5px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Inter", sans-serif;
     cursor: pointer;
     transition: 0.3s;
     &:hover {
