--- a/stylesheets/navbar.module.scss
+++ b/stylesheets/navbar.module.scss
@@ -8,6 +8,12 @@
     display: flex;
     justify-content: space-between;
     padding: 1vh 2vw;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    background-color: white;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
